--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "dependencies": {
         "body-parser": "1.19.0",
         "express": "^4.17.1",
-        "nodemon": "^1.19.2"
+        "nodemon": "^1.19.2",
+        "react-scripts": "^3.1.1"
     },
     "devDependencies": {
         "concurrently": "4.1.1"
-    }
+    },
+    "eslintConfig": {
+		"settings": {
+			"react": {
+				"version": "999.999.999"
+			}
+		}
+	}
 }
