--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "^4.17.1",
         "mysql": "^2.17.1",
         "nodemon": "^1.19.2",
+        "passport": "^0.4.0",
         "react-scripts": "^3.1.1"
     },
     "devDependencies": {
