--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
-        "body-parser": "1.19.0",
+        "axios": "^0.19.0",
+        "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "mysql": "^2.17.1",
